; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c___trace_buffer_unlock_commit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c___trace_buffer_unlock_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ring_buffer = type { i32 }
%struct.ring_buffer_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ring_buffer*, %struct.ring_buffer_event*, i64, i32, i32)* @__trace_buffer_unlock_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__trace_buffer_unlock_commit(%struct.ring_buffer* %0, %struct.ring_buffer_event* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ring_buffer*, align 8
  %7 = alloca %struct.ring_buffer_event*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.ring_buffer* %0, %struct.ring_buffer** %6, align 8
  store %struct.ring_buffer_event* %1, %struct.ring_buffer_event** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.ring_buffer*, %struct.ring_buffer** %6, align 8
  %12 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %7, align 8
  %13 = call i32 @ring_buffer_unlock_commit(%struct.ring_buffer* %11, %struct.ring_buffer_event* %12)
  %14 = load %struct.ring_buffer*, %struct.ring_buffer** %6, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = call i32 @ftrace_trace_stack(%struct.ring_buffer* %14, i64 %15, i32 6, i32 %16)
  %18 = load %struct.ring_buffer*, %struct.ring_buffer** %6, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @ftrace_trace_userstack(%struct.ring_buffer* %18, i64 %19, i32 %20)
  %22 = load i32, i32* %10, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = call i32 (...) @trace_wake_up()
  br label %26

26:                                               ; preds = %24, %5
  ret void
}

declare dso_local i32 @ring_buffer_unlock_commit(%struct.ring_buffer*, %struct.ring_buffer_event*) #1

declare dso_local i32 @ftrace_trace_stack(%struct.ring_buffer*, i64, i32, i32) #1

declare dso_local i32 @ftrace_trace_userstack(%struct.ring_buffer*, i64, i32) #1

declare dso_local i32 @trace_wake_up(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
